having all kinds of computer issues trying to change my mysql password. will continue to work on the file and leave my password to be visible.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -11,8 +11,8 @@
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css"
-	
+<!-- 	<link rel="stylesheet" type="text/css" href="assets/css/style.css"
+ -->	
 	<!-- jQuery -->
 	<script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -41,13 +41,189 @@
     <input type="url" class="form-control form-control-danger" id="url" aria-describedby="urlHelp" placeholder="What do you look like?" required>
   </div>
   
-
+  
   <p>
 	  How much do you agree with the following statements? 1 is "Strongly Disagree" and 5 is "Strongly Agree." 
   </p>
 
-  <p>
-  	1. Traveling around the world is interesting to me.
+  <p id="survey">
+    1. And in the end, the love you take is equal to the love you make.
+  </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form>
+  <p id="survey">
+   2. May the Force be with you.
+  </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form><p id="survey">
+    3. Love means never having to say you're sorry.
+  </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form>
+  <p id="survey">
+    4. All lies and jest, still, a man hears what he wants to hear and disregards the rest.
+    </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form>
+
+  <p id="survey">
+    5. Love means never having to say you're sorry.
+  </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form>
+<p id="survey">
+    6. Show me the money!
+  </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form><p id="survey">
+    7. I'd rather be a hammer than a nail.
+  </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form><p id="survey">
+    8. I think Huey Lewis and the News' undisputed masterpiece is 'Hip to be Square.
+  </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form><p id="survey">
+    9. Freedom's just another word for 'nothing left to lose.
+  </p>
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="1">1
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="2">2
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="3">3
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="4">4
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="optradio" value="5">5
+    </label>
+  </form><p id="survey">
+    10. If you choose not to decide you still have made a choice.
   </p>
   <form>
     <label class="radio-inline">
@@ -71,7 +247,21 @@
 </form>
 
 	</div>
-<script src="assets/js/script.js"></script>
+<script>
+  var questions = [
+  "And in the end, the love you take is equal to the love you make.",
+  "May the Force be with you.",
+  "",
+  "",
+  "",
+  "",
+  "'",
+  "'",
+  ""
+  ]
+
+
+</script>
 
 </body>
 
